couleur fond plus sombre popup cates osm et ign

--- a/src/main/resources/static/css/ruches.css
+++ b/src/main/resources/static/css/ruches.css
@@ -54,7 +54,7 @@ td.num {
 
 .ol-popup {
 	position: absolute;
-	background-color: white;
+	background-color: #888888;
 	-webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 	filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 	padding: 15px;
