--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" th:href="@{/images/ruchesicon.png}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/css/ruches.css}" />
+	th:href="@{/css/ruches-1.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/datatables-1.13.6/datatables.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
@@ -50,9 +50,9 @@
 </head>
 
 <script th:fragment="jsruches" th:src=
-	"@{'/js/ruches-2/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
+	"@{'/js/ruches-3/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
 </script>
-<script th:fragment="jsruchesnom(nom)" th:src="@{'/js/ruches-2/' + ${nom} + '.js'}"></script>
+<script th:fragment="jsruchesnom(nom)" th:src="@{'/js/ruches-3/' + ${nom} + '.js'}"></script>
 
 <script th:fragment="d3" th:src="@{/js/d3.min-7.8.4.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.1.0.js}"></script>
