jquery inarray -> includes

--- a/src/main/resources/templates/essaim/essaimEssaimerForm.html
+++ b/src/main/resources/templates/essaim/essaimEssaimerForm.html
@@ -1,72 +1,69 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	const Essaimage = /*[[#{Essaimage}]]*/null;
-	const essaimNom = /*[[${essaim.nom}]]*/null;
-	const suffix = /*[[${@environment.getProperty('essaime.suffix')}]]*/null;
-	const essaimNoms = /*[[${essaimNoms}]]*/null;
-	const nomexiste = /*[[#{nomexiste}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-		document.getElementById('nom').focus();
-		$('#commentaire').val(Essaimage + ' ' + essaimNom);
-		$('#nom').val(essaimNom + suffix);
-		jQuery.validator.addMethod('nomExiste', function(value) {   
-    		return $.inArray(value, essaimNoms) == -1;
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		const Essaimage = /*[[#{Essaimage}]]*/null;
+		const essaimNom = /*[[${essaim.nom}]]*/null;
+		const suffix = /*[[${@environment.getProperty('essaime.suffix')}]]*/null;
+		const essaimNoms = /*[[${essaimNoms}]]*/null;
+		const nomexiste = /*[[#{nomexiste}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('nom').focus();
+			$('#commentaire').val(Essaimage + ' ' + essaimNom);
+			$('#nom').val(essaimNom + suffix);
+			jQuery.validator.addMethod('nomExiste', function (value) {
+				return !essaimNoms.includes(value);
 			}, nomexiste);
-		$('#essaimeForm').validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				nom : {
-					required : true,
-					nomExiste : true
+			$('#essaimeForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				date : {
-					required : true
-				},
-				commentaire : {
-					maxlength : 255
-				},
-			}
+				rules: {
+					nom: {
+						required: true,
+						nomExiste: true
+					},
+					date: {
+						required: true
+					},
+					commentaire: {
+						maxlength: 255
+					},
+				}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
-	<br/><br/><br/>
+	<br /><br /><br />
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block
-						th:text="#{Essaimage}+' '"></th:block>
-					<a th:href="@{'/essaim/'+${essaimId}}"
-						th:text="#{essaim}+' '+${essaim.nom}"></a>
-					<th:block
-						th:text="#{ruche} + ' ' + ${ruche.nom}"></th:block>
+					<th:block th:text="#{Essaimage}+' '"></th:block>
+					<a th:href="@{'/essaim/'+${essaimId}}" th:text="#{essaim}+' '+${essaim.nom}"></a>
+					<th:block th:text="#{ruche} + ' ' + ${ruche.nom}"></th:block>
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/essaim/essaime/sauve/' + ${essaim.id}}"
-		method="post" id="essaimeForm">
+	<form action="#" th:action="@{'/essaim/essaime/sauve/' + ${essaim.id}}" method="post" id="essaimeForm">
 		<div th:replace="includeForm :: date"></div>
 		<div class="form-floating mb-3">
-			<input class="form-control" type="text" placeholder=""
-				id="nom" name="nom"	maxlength="92" />
+			<input class="form-control" type="text" placeholder="" id="nom" name="nom" maxlength="92" />
 			<label class="form-label" for="nom" th:text="#{NomNouvelEssaim}"></label>
 		</div>
-		<div th:replace="includeForm :: commentaire"></div>    
+		<div th:replace="includeForm :: commentaire"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
