--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -13,7 +13,7 @@
 			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
 			document.getElementById('nom').focus();
 			jQuery.validator.addMethod('nomExiste', function (value) {
-				return $.inArray(value, essaimNoms) == -1;
+				return !essaimNoms.includes(value);
 			}, nomexiste);
 			$('#essaimForm').validate({
 				errorClass: 'erreur-form',
