--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -14,11 +14,10 @@
 			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
 			document.getElementById('nom').focus();
 			jQuery.validator.addMethod('nomExiste', function (value) {
-				return $.inArray(value, hausseNoms) === -1;
+				return !hausseNoms.includes(value);
 			}, nomexiste);
 			$.validator.addMethod('lowerOrEqualThan', function (value, element, param) {
-				// let $otherElement = $(param);
-				return parseInt(value, 10) <= parseInt( $(param).val(), 10);
+				return parseInt(value, 10) <= parseInt($(param).val(), 10);
 			});
 			$('#hausseForm').validate({
 				errorClass: 'erreur-form',
