--- a/src/main/resources/templates/rucher/rucherForm.html
+++ b/src/main/resources/templates/rucher/rucherForm.html
@@ -8,7 +8,7 @@
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('nom').focus();
 			jQuery.validator.addMethod('nomExiste', function (value) {
-				return $.inArray(value, rucherNoms) === -1;
+				return !rucherNoms.includes(value);
 			}, nomexiste);
 			$('#rucherForm').validate({
 				errorClass: 'erreur-form',
