--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -7,7 +7,8 @@
 			new DataTable('.datatable-tri', {
 				paging: false,
 				searching: false,
-				info: false
+				info: false,
+				scrollX: true
 			});
 		});
 	</script>
