rucherMeteo.js jquery -> js

--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -50,7 +50,7 @@
 					data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse0" th:text="#{aujourdhui}">
 				</button>
 			</h1>
-			<div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#accordion">
+			<div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#accordion">
 				<div class="accordion-body">
 					<table class="table">
 						<thead>
