--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -49,7 +49,7 @@
 			</h1>
 			<div id="collapse0" class="accordion-collapse collapse" data-bs-parent="#accordion">
 				<div class="accordion-body">
-					<table class="table table-bordered table-striped table-sm datatable-tri">
+					<table class="table table-bordered table-striped datatable-tri table-sm">
 						<thead>
 							<tr>
 								<th scope="col" th:text="#{rayonkm}"></th>
@@ -77,7 +77,7 @@
 			</h1>
 			<div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#accordion">
 				<div class="accordion-body">
-					<table class="table table-bordered table-striped table-sm">
+					<table class="table table-bordered table-striped datatable-tri table-sm">
 						<thead>
 							<tr>
 								<th scope="col" th:text="#{date}"></th>
