--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -21,6 +21,10 @@
 		.wi {
 			font-size: 20px;
 		}
+
+		.scrollx {
+			overflow-x: auto;
+		}
 	</style>
 	<link th:replace="include :: weather-icons">
 	</link>
@@ -51,7 +55,7 @@
 				</button>
 			</h1>
 			<div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#accordion">
-				<div class="accordion-body">
+				<div class="accordion-body scrollx">
 					<table class="table">
 						<thead>
 							<tr>
@@ -143,7 +147,7 @@
 				</button>
 			</h1>
 			<div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#accordion">
-				<div class="accordion-body">
+				<div class="accordion-body scrollx">
 					<canvas id="tempGraphe"></canvas>
 				</div>
 			</div>
@@ -155,7 +159,7 @@
 				</button>
 			</h1>
 			<div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordion">
-				<div class="accordion-body">
+				<div class="accordion-body scrollx">
 					<table class="table table-bordered">
 						<thead>
 							<tr>
@@ -185,7 +189,7 @@
 				</button>
 			</h1>
 			<div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordion">
-				<div class="accordion-body">
+				<div class="accordion-body scrollx">
 					<table class="table table-bordered">
 						<thead>
 							<tr>
