--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -15,7 +15,7 @@
 		const enlevHRecDe30 = /*[[#{enlverhaussesrecoltedelai(30)}]]*/null;
 		const urlRecHDepot = /*[[@{/recolte/haussesDepot/}]]*/null;
 		const recId = /*[[${recolte.id}]]*/null;
-		const totalPourLaRuche = /*[[#{totalPourLaRuche}]]*/null;
+		const total = /*[[#{Total}]]*/null;
 	</script>
 </head>
 
