ruchersListeGg et Ol jquery -> js

--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -42,7 +42,8 @@
 					th:href="@{'/recolte/statistiques/essaim/'+${recolte.id}}" class="bi-pie-chart"
 					th:title="#{statistiquesessaims}" aria-hidden="true"></a> <a id="supprime"
 					th:href="@{'/recolte/supprime/'+${recolte.id}}" class="bi-trash" style="color: red"
-					th:title="#{supprimer}" aria-hidden="true"></a> <input type="text" id="date" name="date">
+					th:title="#{supprimer}" aria-hidden="true"></a>
+				<input type="text" id="date" name="date">
 				<button id="dateOK" th:text="#{Retirerhausses}"></button>
 			</div>
 		</div>
