--- a/src/main/resources/templates/essaim/essaimAssociationForm.html
+++ b/src/main/resources/templates/essaim/essaimAssociationForm.html
@@ -1,63 +1,64 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
-<script th:replace="include :: localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/ null;
-	const dateFirst = /*[[${dateFirst}]]*/ null;
-	const timeFirst = /*[[${timeFirst}]]*/ null;
-	const rucherucherid = /*[[${ruche.rucher?.id}]]*/ null;
-	const ruchesourcerucherid = /*[[${rucheSource?.rucher?.id}]]*/ null;
-	document.addEventListener('DOMContentLoaded', () => {
-		$.validator.addMethod( 'greaterThanEqual', function( value, element, param ) {
-			return ($('#swapPositions').is(':checked') &&
-				(rucherucherid != ruchesourcerucherid))
-			? (Date.parse(value) > Date.parse(param)) : true;
-		}, doitEtreSupA + ' {0}');
-		$('#evenementForm').validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true,
-					greaterThanEqual : dateFirst + ' ' + timeFirst
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include :: localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/ null;
+		const dateFirst = /*[[${dateFirst}]]*/ null;
+		const timeFirst = /*[[${timeFirst}]]*/ null;
+		const rucherucherid = /*[[${ruche.rucher?.id}]]*/ null;
+		const ruchesourcerucherid = /*[[${rucheSource?.rucher?.id}]]*/ null;
+		document.addEventListener('DOMContentLoaded', () => {
+			$.validator.addMethod('greaterThanEqual', function (value, element, param) {
+				return ($('#swapPositions').is(':checked') &&
+					(rucherucherid != ruchesourcerucherid))
+					? (Date.parse(value) > Date.parse(param)) : true;
+			}, doitEtreSupA + ' {0}');
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true,
+						greaterThanEqual: dateFirst + ' ' + timeFirst
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
-		});
-		$('#date').datetimepicker({
-			minDate: false,
-			minTime: false
-		});
-		function swapChange() {
-			const isChk =  $('#swapPositions').is(':checked') &&
-				(rucherucherid != ruchesourcerucherid);
-			$('#date').datetimepicker({
-				minDate: isChk ? dateFirst : false,
-				minTime: isChk ? timeFirst : false
 			});
-		}
-		$('#swapPositions').on('change', swapChange);
-	});
-</script>
+			$('#date').datetimepicker({
+				minDate: false,
+				minTime: false
+			});
+			function swapChange() {
+				const isChk = $('#swapPositions').is(':checked') &&
+					(rucherucherid != ruchesourcerucherid);
+				$('#date').datetimepicker({
+					minDate: isChk ? dateFirst : false,
+					minTime: isChk ? timeFirst : false
+				});
+			}
+			$('#swapPositions').on('change', swapChange);
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
-	<br/><br/><br/>
+	<br /><br /><br />
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/essaim/associe/'+${essaimId}}"
 						th:text="#{association}+' '+#{essaim}+' '+${essaim.nom}"></a>
-					<th:block
-						th:text="#{ruche} + ' ' + ${ruche.nom}"></th:block>
+					<th:block th:text="#{ruche} + ' ' + ${ruche.nom}"></th:block>
 				</h1>
 			</div>
 		</div>
@@ -67,19 +68,22 @@
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/essaim/ruche/associe/sauve/' + ${ruche.id} + '/' + ${essaim.id}}"
-		method="post" id="evenementForm">
+	<form action="#" th:action="@{'/essaim/ruche/associe/sauve/' + ${ruche.id} + '/' + ${essaim.id}}" method="post"
+		id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
-		<div class="form-check"  th:if="${rucheSource}">
-		  <input class="form-check-input" type="checkbox" id="swapPositions" name="swapPositions" /> 
-		  <label class="form-check-label" for="swapPositions" 
-		    th:text="#{echangePositionsRuches(${ruche.nom},${rucheSource.nom})}"></label>
-	    </div>
-	    <br/><br/>
+		<div class="form-check" th:if="${(rucheSource != null) and (!ruche.rucher.id.equals(rucheSource.rucher.id))}">
+			<p th:utext="#{positionRuches(${ruche.nom},${ruche.rucher.nom})} + '<br/>'
+				 + #{positionRuches(${rucheSource.nom},${rucheSource.rucher.nom})}">
+			</p>
+			<input class="form-check-input" type="checkbox" id="swapPositions" name="swapPositions" />
+			<label class="form-check-label" for="swapPositions"
+				th:text="#{echangePositionsRuches(${ruche.nom},${rucheSource.nom})}"></label>
+		</div>
+		<br /><br />
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
