--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -1,69 +1,67 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
-	const dateFirst = /*[[${dateFirst}]]*/null;
-	const timeFirst = /*[[${timeFirst}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-		$.validator.addMethod( 'greaterThanEqual', function( value, element, param ) {
-			return $('#depot').is(':checked') ? (Date.parse(value) > Date.parse(param)) : true;
-		}, doitEtreSupA + ' {0}');
-	    $('.bi-question-lg').popover({
-	        html: true
-	    });
-	    $('.popover-dismiss').popover({
-	        trigger: 'focus'
-	    });
-		document.getElementById('commentaire').focus();
-		$('#evenementForm').validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true,
-					greaterThanEqual : dateFirst + ' ' + timeFirst
-				},
-				commentaire : {
-					maxlength : 255
-				}
-			}
-		});
-		$('#date').datetimepicker({
-			minDate: dateFirst,
-			minTime: timeFirst
-		});
-		function depotOnChange() {
-			const isChk =  $('#depot').is(":checked");
-			$('#date').datetimepicker({
-				minDate: isChk ? dateFirst : false,
-				minTime: isChk ? timeFirst : false
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
+		const dateFirst = /*[[${dateFirst}]]*/null;
+		const timeFirst = /*[[${timeFirst}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			$.validator.addMethod('greaterThanEqual', function (value, element, param) {
+				return $('#depot').is(':checked') ? (Date.parse(value) > Date.parse(param)) : true;
+			}, doitEtreSupA + ' {0}');
+			new bootstrap.Popover(document.getElementsByClassName('bi-question-lg')[0], {
+				html: true
 			});
-		}
-		$('#depot').on('change', depotOnChange);
-		$('#remerageId').on('change', function (e) {	
-			if (e.target.value === '') {
-				$('#depot').prop('disabled', false);
-				$('#evencadre').prop('disabled', false);
-				$('#depot').prop('checked', true);
-				$('#evencadre').prop('checked', true);
-			} else {
-				$('#depot').prop('disabled', true);
-				$('#evencadre').prop('disabled', true);
-				$('#depot').prop('checked', false);
-				$('#evencadre').prop('checked', false);
+			document.getElementById('commentaire').focus();
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
+				},
+				rules: {
+					date: {
+						required: true,
+						greaterThanEqual: dateFirst + ' ' + timeFirst
+					},
+					commentaire: {
+						maxlength: 255
+					}
+				}
+			});
+			$('#date').datetimepicker({
+				minDate: dateFirst,
+				minTime: timeFirst
+			});
+			function depotOnChange() {
+				const isChk = $('#depot').is(":checked");
+				$('#date').datetimepicker({
+					minDate: isChk ? dateFirst : false,
+					minTime: isChk ? timeFirst : false
+				});
 			}
-			depotOnChange();
+			$('#depot').on('change', depotOnChange);
+			$('#remerageId').on('change', function (e) {
+				if (e.target.value === '') {
+					$('#depot').prop('disabled', false);
+					$('#evencadre').prop('disabled', false);
+					$('#depot').prop('checked', true);
+					$('#evencadre').prop('checked', true);
+				} else {
+					$('#depot').prop('disabled', true);
+					$('#evencadre').prop('disabled', true);
+					$('#depot').prop('checked', false);
+					$('#evencadre').prop('checked', false);
+				}
+				depotOnChange();
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -74,14 +72,12 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{dispersion} + ' '"></th:block>
-					<a th:href="@{'/essaim/'+${essaimId}}"
-						th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
+					<a th:href="@{'/essaim/'+${essaimId}}" th:text="#{essaim} + ' ' + ${essaim.nom}"></a>
 				</h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
-					data-bs-trigger="focus" tabindex="0" role="button"
-					th:attr="data-bs-content=#{aideessaimdspersionform}"></a>
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
+					role="button" th:attr="data-bs-content=#{aideessaimdspersionform}"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -92,18 +88,14 @@
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/evenement/essaim/sauve/dispersion/'+${essaim.id}}"
-		method="post" id="evenementForm">
+	<form action="#" th:action="@{'/evenement/essaim/sauve/dispersion/'+${essaim.id}}" method="post" id="evenementForm">
 		<div class="form-check">
-			<input class="form-check-input" type="checkbox" id="depot"
-				name="depot" checked /> <label class="form-check-label" for="depot"
-				th:text="#{retourrucheaudepot}"></label>
+			<input class="form-check-input" type="checkbox" id="depot" name="depot" checked /> <label
+				class="form-check-label" for="depot" th:text="#{retourrucheaudepot}"></label>
 		</div>
 		<div id="divevencadre" class="form-check">
-			<input class="form-check-input" type="checkbox" id="evencadre"
-				name="evencadre" checked /> <label class="form-check-label"
-				for="evencadre" th:text="#{creationevecadrezero}"></label>
+			<input class="form-check-input" type="checkbox" id="evencadre" name="evencadre" checked /> <label
+				class="form-check-label" for="evencadre" th:text="#{creationevecadrezero}"></label>
 		</div>
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
@@ -111,8 +103,8 @@
 			<div class="form-floating mb-3">
 				<select class="form-control" id="remerageId" name="remerageId">
 					<option th:text="#{aucun}" value=""></option>
-					<option th:each="essaimopt : ${essaimsRemerage}"
-						th:value="${essaimopt[0]}" th:text="${essaimopt[1]}"></option>
+					<option th:each="essaimopt : ${essaimsRemerage}" th:value="${essaimopt[0]}"
+						th:text="${essaimopt[1]}"></option>
 				</select> <label class="form-label" for="remerageId"
 					th:text="#{nouvellereine} + ' ' + ${nomRuche}"></label>
 			</div>
@@ -121,4 +113,5 @@
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
