--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -1,32 +1,33 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-const buttontextprint = /*[[#{buttontextprint}]]*/ null;
-const buttontextcol = /*[[#{buttontextcol}]]*/ null;
-const Essaims = /*[[#{Essaims}]]*/ null;
-const Production = /*[[#{Production}]]*/ null;
-document.addEventListener('DOMContentLoaded', () => {
-    $('.bi-question-lg').popover({
-        html: true
-    });
-    $('.popover-dismiss').popover({
-        trigger: 'focus'
-    });
-    new DataTable('#statistiques', {
-    	dom: 'Blftip',
-    	scrollX: true,
-	    buttons: [
-	    	'csv',
-	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: Essaims + ' ' + Production + ' ' + (new Date()).toLocaleDateString()},
-	        {extend: 'print', text: buttontextprint},
-	        {extend: 'colvis', text: buttontextcol}
-        ]
-    });
-});
-</script>
+	<script th:inline="javascript">
+		const buttontextprint = /*[[#{buttontextprint}]]*/ null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/ null;
+		const Essaims = /*[[#{Essaims}]]*/ null;
+		const Production = /*[[#{Production}]]*/ null;
+		document.addEventListener('DOMContentLoaded', () => {
+			new bootstrap.Popover(document.getElementsByClassName('bi-question-lg')[0], {
+				html: true
+			});
+			new DataTable('#statistiques', {
+				dom: 'Blftip',
+				scrollX: true,
+				buttons: [
+					'csv',
+					{
+						extend: 'pdf', exportOptions: {columns: ':visible'},
+						title: Essaims + ' ' + Production + ' ' + (new Date()).toLocaleDateString()
+					},
+					{extend: 'print', text: buttontextprint},
+					{extend: 'colvis', text: buttontextcol}
+				]
+			});
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -41,46 +42,37 @@ document.addEventListener('DOMContentLoaded', () => {
 				</h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
-					data-bs-trigger="focus" tabindex="0" role="button"
-					th:attr="data-bs-content=#{aideStatistiqueEssaim}"></a>
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
+					role="button" th:attr="data-bs-content=#{aideStatistiqueEssaim}"></a>
 			</div>
-        </div>
-    </div>
-    <div class="container-fluid">
-	    <form action="#" th:action="@{/essaim/statistiques}"
-			method="get" id="rucherForm">
+		</div>
+	</div>
+	<div class="container-fluid">
+		<form action="#" th:action="@{/essaim/statistiques}" method="get" id="rucherForm">
 			<div class="mb-3 row">
-				<label for="rucherId" th:text="#{rucher}"
-				  class="col-sm-2 col-form-label"></label>
+				<label for="rucherId" th:text="#{rucher}" class="col-sm-2 col-form-label"></label>
 				<select class="form-control col-sm-10" id="rucherId" name="rucherId">
-					
-					<option th:text="#{tous}" value="0"  
-								th:selected="0 == (${rucherId}==null?'0':${rucherId})">
+					<option th:text="#{tous}" value="0" th:selected="0 == (${rucherId}==null?'0':${rucherId})">
 					</option>
-					
-					
-					<option th:each="rucheropt : ${rucherIdNom}" th:value="${rucheropt.id}"
-								th:text="${rucheropt.nom}"  
-								th:selected="${rucheropt.id} == (${rucherId}==null?'0':${rucherId})">
+					<option th:each="rucheropt : ${rucherIdNom}" th:value="${rucheropt.id}" th:text="${rucheropt.nom}"
+						th:selected="${rucheropt.id} == (${rucherId}==null?'0':${rucherId})">
 					</option>
 				</select>
 			</div>
 			<div class="input-group mb-3 row">
-  			  <div class="form-check col-sm-2 ">
-			    <input class="form-check-input" type="checkbox" id="masquerInactif" 
-			      name="masquerInactif" th:checked="${masquerInactif}"/>
-			    <label class="form-check-label" for="masquerInactif" th:text="#{masquerInactif}"></label>
-		      </div>
-			  <input class="col-sm-1 btn btn-outline-primary btn-sm" type="submit"
-				th:value="#{filtrer}" /> 
-		    </div>
+				<div class="form-check col-sm-2 ">
+					<input class="form-check-input" type="checkbox" id="masquerInactif" name="masquerInactif"
+						th:checked="${masquerInactif}" />
+					<label class="form-check-label" for="masquerInactif" th:text="#{masquerInactif}"></label>
+				</div>
+				<input class="col-sm-1 btn btn-outline-primary btn-sm" type="submit" th:value="#{filtrer}" />
+			</div>
 		</form>
-    </div>
+	</div>
 	<div class="container-fluid">
-	<table class="table table-bordered table-striped table-sm" id="statistiques">
+		<table class="table table-bordered table-striped table-sm" id="statistiques">
 			<thead>
-			    <tr>
+				<tr>
 					<th th:text="#{essaim}"></th>
 					<th th:text="#{dateAcquisition}"></th>
 					<th th:unless="${masquerInactif}" th:text="#{dispersion}"></th>
@@ -93,13 +85,12 @@ document.addEventListener('DOMContentLoaded', () => {
 			</thead>
 			<tbody>
 				<tr th:each="essaimPoids : ${essaimsPoids}">
-				  	<td><a th:href="@{'/essaim/'+${essaimPoids.id}}"
-						th:text="${essaimPoids.nom}"></a></td>
-				  	<td th:text="${essaimPoids.dateAcquisition}"></td>
-				  	<td th:unless="${masquerInactif}"  th:text="${essaimPoids.dateDispersion}"></td>	
+					<td><a th:href="@{'/essaim/'+${essaimPoids.id}}" th:text="${essaimPoids.nom}"></a></td>
+					<td th:text="${essaimPoids.dateAcquisition}"></td>
+					<td th:unless="${masquerInactif}" th:text="${essaimPoids.dateDispersion}"></td>
 					<td th:if="${rucherId == null}" th:text="${essaimPoids.duree}"></td>
-				  	<td th:text="${essaimPoids.pTotal}"></td>	
-					<td th:text="${essaimPoids.pMax}"></td>	
+					<td th:text="${essaimPoids.pTotal}"></td>
+					<td th:text="${essaimPoids.pMax}"></td>
 					<td th:text="${essaimPoids.pMin}"></td>
 					<td th:if="${rucherId == null}" th:text="${essaimPoids.pMoyen}"></td>
 				</tr>
@@ -108,4 +99,5 @@ document.addEventListener('DOMContentLoaded', () => {
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
