--- a/src/main/resources/templates/essaim/essaimSucreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreLotForm.html
@@ -1,33 +1,35 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script>
-	document.addEventListener('DOMContentLoaded', () => {
-		document.getElementById('valeur').focus();
-		$('#evenementForm').validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('valeur').focus();
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				valeur : {
-					required : true,
-					number : true
-				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true
+					},
+					valeur: {
+						required: true,
+						number: true
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -43,11 +45,8 @@
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}"
-		method="post" id="evenementForm">
-		<input type="hidden" id="typeEvenement" name="typeEvenement"
-			value="ESSAIMSUCRE" />
+	<form action="#" th:action="@{'/evenement/essaim/sauve/lot/' + ${eIds}}" method="post" id="evenementForm">
+		<input type="hidden" id="typeEvenement" name="typeEvenement" value="ESSAIMSUCRE" />
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: poidskg"></div>
 		<div th:replace="includeForm :: commentaire"></div>
@@ -55,4 +54,5 @@
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
