--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -1,30 +1,31 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script>
-	document.addEventListener('DOMContentLoaded', () => {
-		document.getElementById('commentaire').focus();
-		$("#evenementForm").validate({
-			errorClass : 'erreur-form',
-			errorPlacement : function(error, element) {
-				error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('commentaire').focus();
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -45,26 +46,22 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve'}"
-		th:object="${evenement}" method="post" id="evenementForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{ruche}" /> <input type="hidden" th:field="*{rucher}" />
-		<input type="hidden" th:field="*{essaim}" /> <input type="hidden"
-			th:field="*{hausse}" />
+	<form action="#" th:action="@{'/evenement/essaim/sauve'}" th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{ruche}" /> <input type="hidden"
+			th:field="*{rucher}" />
+		<input type="hidden" th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
 		<div th:replace="includeForm :: dateField"></div>
 		<div class="form-floating mb-3 ruches">
 			<select id="type" name="type" class="form-control">
 				<option
 					th:each="typeEve : ${ {T(ooioo.ruches.evenement.TypeEvenement).ESSAIMTRAITEMENT,  T(ooioo.ruches.evenement.TypeEvenement).ESSAIMTRAITEMENTFIN} }"
-					th:value="${typeEve}" th:text="#{${typeEve}}"
-					th:selected="${typeEve}==*{type}"></option>
+					th:value="${typeEve}" th:text="#{${typeEve}}" th:selected="${typeEve}==*{type}"></option>
 			</select> <label class="form-label" for="type" th:text="#{typeEvenement}"></label>
 		</div>
 
 		<div class="form-floating mb-3">
-			<input placeholder="" class="form-control" type="number" step="0.001"
-				th:field="*{valeur}" th:errorclass="fieldError" /> <label
-				class="form-label" th:text="#{quantite}" for="valeur"></label>
+			<input placeholder="" class="form-control" type="number" step="0.001" th:field="*{valeur}"
+				th:errorclass="fieldError" /> <label class="form-label" th:text="#{quantite}" for="valeur"></label>
 		</div>
 
 		<div th:replace="includeForm :: commentaireField"></div>
@@ -72,4 +69,5 @@
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
