--- a/src/main/resources/templates/hausse/hausseRemplissageForm.html
+++ b/src/main/resources/templates/hausse/hausseRemplissageForm.html
@@ -8,7 +8,7 @@
 <script>
 	document.addEventListener('DOMContentLoaded', () => {
 		document.getElementById('valeur').focus();
-		$("#evenementForm").validate({
+		$('#evenementForm').validate({
 			errorClass : 'erreur-form',
 			errorPlacement : function(error, element) {
 				error.insertBefore(element.closest('div'));
