recolteDetail ajout chkbox données brutes

--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -2,38 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
 		const Recoltes = /*[[#{Recoltes}]]*/null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/null;
-		document.addEventListener('DOMContentLoaded', () => {
-			const idTbl = '#recoltes';
-			new DataTable(idTbl, {
-				dom: 'Blftip',
-				scrollX: true,
-				buttons: ['csv', {
-					extend: 'pdf',
-					exportOptions: {
-						columns: ':visible'
-					},
-					action: function (e, dt, node, config) {
-						config.title = Recoltes + ' ' + (new Date()).toLocaleDateString();
-						const inputSearch = this.search();
-						if (inputSearch.length !== 0) {
-							config.title += ' <' + inputSearch + '>';
-						}
-						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-					}
-				}, {
-						extend: 'print',
-						text: buttontextprint
-					}, {
-						extend: 'colvis',
-						text: buttontextcol
-					}],
-				order: [ [0, 'desc'] ]
-			});
-		});
 	</script>
 </head>
 
