--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -85,38 +85,58 @@
 			</tbody>
 		</table>
 		<h6 th:text="#{Pasdehausse}" th:if="${#lists.isEmpty(detailsRecolte)}"></h6>
-		<h6 th:text="#{haussesRecolte}" th:unless="${#lists.isEmpty(detailsRecolte)}"></h6>
-		<table class="table table-sm table-bordered" id="hausses" th:unless="${#lists.isEmpty(detailsRecolte)}">
-			<thead>
-				<tr>
-					<th th:text="#{hausse}"></th>
-					<th th:text="#{ruche}"></th>
-					<th th:text="#{essaim}"></th>
-					<th th:text="#{rucher}"></th>
-					<th th:text="#{poidsMiel}"></th>
-					<th th:text="#{poidsAvant}"></th>
-					<th th:text="#{poidsApres}"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="detailRecolte : ${detailsRecolte}">
-					<td><a data-bs-toggle="tooltip" th:title="#{saisirpoids}"
-							th:href="@{'/recolte/modifie/hausse/'+${recolte.id}+'/'+${detailRecolte.id}}"
-							th:text="${detailRecolte.hausse.nom}"></a></td>
-					<td><a th:href="@{'/ruche/'+${detailRecolte.ruche?.id}}" th:text="${detailRecolte.ruche?.nom}"></a>
-					</td>
-					<td><a th:href="@{'/essaim/'+${detailRecolte.essaim?.id}}"
-							th:text="${detailRecolte.essaim?.nom}"></a></td>
-					<td><a th:href="@{'/rucher/'+${detailRecolte.rucher?.id}}"
-							th:text="${detailRecolte.rucher?.nom}"></a></td>
-					<td class="num"
-						th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant - detailRecolte.poidsApres,1,2,'DEFAULT')}">
-					</td>
-					<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant,1,2,'DEFAULT')}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsApres,1,2,'DEFAULT')}"></td>
-				</tr>
-			</tbody>
-		</table>
+		<th:block th:unless="${#lists.isEmpty(detailsRecolte)}">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col">
+						<h6 class="item">
+							<th:block th:text="#{haussesRecolte}"></th:block>
+						</h6>
+					</div>
+					<div class="col">
+						<span class="padicons"> <input type="checkbox" id="raw" /> <label for="raw"
+								th:text="#{Brut}"></label>
+						</span>
+					</div>
+				</div>
+			</div>
+			<table class="table table-sm table-bordered" id="hausses">
+				<thead>
+					<tr>
+						<th th:text="#{hausse}"></th>
+						<th th:text="#{ruche}"></th>
+						<th th:text="#{essaim}"></th>
+						<th th:text="#{rucher}"></th>
+						<th th:text="#{poidsMiel}"></th>
+						<th th:text="#{poidsAvant}"></th>
+						<th th:text="#{poidsApres}"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="detailRecolte : ${detailsRecolte}">
+						<td><a data-bs-toggle="tooltip" th:title="#{saisirpoids}"
+								th:href="@{'/recolte/modifie/hausse/'+${recolte.id}+'/'+${detailRecolte.id}}"
+								th:text="${detailRecolte.hausse.nom}"></a></td>
+						<td><a th:href="@{'/ruche/'+${detailRecolte.ruche?.id}}"
+								th:text="${detailRecolte.ruche?.nom}"></a>
+						</td>
+						<td><a th:href="@{'/essaim/'+${detailRecolte.essaim?.id}}"
+								th:text="${detailRecolte.essaim?.nom}"></a>
+						</td>
+						<td><a th:href="@{'/rucher/'+${detailRecolte.rucher?.id}}"
+								th:text="${detailRecolte.rucher?.nom}"></a>
+						</td>
+						<td class="num"
+							th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant - detailRecolte.poidsApres,1,2,'DEFAULT')}">
+						</td>
+						<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsAvant,1,2,'DEFAULT')}">
+						</td>
+						<td class="num" th:text="${#numbers.formatDecimal(detailRecolte.poidsApres,1,2,'DEFAULT')}">
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</th:block>
 	</div>
 	<br />
 	<footer th:replace="~{include::footer}"></footer>
