jquery 3.7.0 -> 3.7.1, essaimAssociationForm test si swaocheck null

--- a/src/main/resources/templates/essaim/essaimAssociationForm.html
+++ b/src/main/resources/templates/essaim/essaimAssociationForm.html
@@ -45,7 +45,7 @@
 					minTime: isChk ? timeFirst : false
 				});
 			}
-			swapCheck.addEventListener('change', swapChange);
+			if (swapCheck) { swapCheck.addEventListener('change', swapChange); }
 		});
 	</script>
 </head>
