--- a/src/main/resources/templates/essaim/essaimTraitementLotForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementLotForm.html
@@ -8,6 +8,11 @@
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('commentaire').focus();
+			document.getElementById('finTraitement').addEventListener('click', function (e) {
+				document.getElementById('typeEvenement').value =
+					event.target.checked ? 'ESSAIMTRAITEMENTFIN' : 'ESSAIMTRAITEMENT';
+			});
+/*
 			$('#finTraitement').on(
 				'click',
 				function () {
@@ -17,6 +22,7 @@
 						$('#typeEvenement').attr('value', 'ESSAIMTRAITEMENT');
 					}
 				});
+*/				
 			$('#evenementForm').validate({
 				errorClass: 'erreur-form',
 				errorPlacement: function (error, element) {
